[tool.poetry]
name = "etsi-qkd-014-client"
version = "0.9.0"
description = "A Python client for the QKD 014 standard"
authors = ["Yoann Piétri <Yoann.Pietri@lip6.fr>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/nanoy42/etsi-qkd-014-client"
documentation = "https://etsi-qkd-014-client.readthedocs.io/en/latest/"
keywords = ["qkd","etsi-qkd-014", "python client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator"
]
packages = [
    { include = "etsi_qkd_014_client" },
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
black = "^22.10.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qkd014-client = 'etsi_qkd_014_client.cli:main'